# Algorytmy-II

./: CMakeLists.txt  Dokumentacja kodu.docx  Dokumentacja programu CPP.docx  Presentation.cpp  README.md  brut-force.cpp  brute-force.h  hamilton.h  hungarian.cpp  hungarian.h  main.cpp  project.cpp  project.h  projekt.cpp  types.h
HungarianClass/: hungarian.cpp  hungarian.h  types.h
test/: CMakeLists.txt
test/test_files/: CMakeLists.txt  test.cpp
